added boss arena menu

--- a/index.html
+++ b/index.html
@@ -53,6 +53,47 @@
             <div class="test-arena-launcher">
                 <button id="test-arena-btn" class="menu-btn test-btn">TEST ARENA 🧪</button>
                 <button id="test-arena-2-btn" class="menu-btn test-btn portal">TEST ARENA 2 🌀</button>
+                <button id="boss-arena-btn" class="menu-btn test-btn boss">BOSS ARENA 💀</button>
+            </div>
+        </div>
+    </div>
+
+    <!-- Boss Menu -->
+    <div id="boss-menu" class="overlay hidden">
+        <div class="menu-content boss-hub-content">
+            <h1 class="boss-title">ELITE <span>BOSS ARENA</span></h1>
+
+            <div class="boss-grid">
+                <div class="boss-card serpent" data-boss="flame-serpent">
+                    <div class="boss-portrait" style="background-image: url('assets/boss_serpent.png')"></div>
+                    <div class="boss-info">
+                        <h3>THE FLAME SERPENT</h3>
+                        <span class="boss-diff">DIFFICULTY: EXPERT</span>
+                        <p>A relentless predator made of living fire.</p>
+                    </div>
+                </div>
+
+                <div class="boss-card froggy" data-boss="froggy">
+                    <div class="boss-portrait" style="background-image: url('assets/boss_froggy.png')"></div>
+                    <div class="boss-info">
+                        <h3>FROGGY THE HUNGRY</h3>
+                        <span class="boss-diff">DIFFICULTY: EXPERT</span>
+                        <p>Watch your back—his tongue is faster than light.</p>
+                    </div>
+                </div>
+
+                <div class="boss-card sophia" data-boss="sophia">
+                    <div class="boss-portrait" style="background-image: url('assets/boss_sophia.png')"></div>
+                    <div class="boss-info">
+                        <h3>SOPHIA THE JEALOUS</h3>
+                        <span class="boss-diff">DIFFICULTY: EXPERT</span>
+                        <p>A queen of petals and deadly poisonous powder.</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="boss-actions">
+                <button id="boss-back-btn" class="menu-btn test-btn back pulse-low">BACK TO COMMAND HUB ⬅️</button>
             </div>
         </div>
     </div>
