--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <script src="particle.js"></script>
     <script src="obstacle.js"></script>
     <script src="toxicSnake.js"></script>
-    <script src="food.js"></script>
+    <script src="food.js?v=20260205b"></script>
     <script src="snake.js"></script>
     <script src="bossRenderer.js"></script>
     <script src="tutorial.js"></script>
