added boss design,health bar boss rush system

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <script src="food.js?v=20260205b"></script>
     <script src="snake.js"></script>
     <script src="bossRenderer.js"></script>
+    <script src="flameSerpent.js"></script>
     <script src="tutorial.js"></script>
     <script src="sketch.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;700;900&display=swap" rel="stylesheet">
@@ -126,6 +127,11 @@
             <div class="ui-item timer-container">
                 <span class="ui-label">TIME</span>
                 <span id="game-timer">00:00</span>
+            </div>
+            <div id="health-container" class="ui-item health-container hidden">
+                <span class="heart" id="heart-1">❤️</span>
+                <span class="heart" id="heart-2">❤️</span>
+                <span class="heart" id="heart-3">❤️</span>
             </div>
         </div>
     </div>
