added bats and bats flock

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <script src="snake.js"></script>
     <script src="bossRenderer.js"></script>
     <script src="flameSerpent.js"></script>
+    <script src="batFlock.js"></script>
     <script src="tutorial.js"></script>
     <script src="sketch.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;700;900&display=swap" rel="stylesheet">
