added inro boss animation for flaming serpent

--- a/index.html
+++ b/index.html
@@ -8,17 +8,17 @@
     <link rel="stylesheet" href="style.css?v=20260205">
     <link rel="stylesheet" href="levels.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.0/p5.min.js"></script>
-    <script src="vehicle.js"></script>
-    <script src="particle.js"></script>
-    <script src="obstacle.js"></script>
-    <script src="toxicSnake.js"></script>
-    <script src="food.js?v=20260205b"></script>
-    <script src="snake.js"></script>
-    <script src="bossRenderer.js"></script>
-    <script src="flameSerpent.js"></script>
-    <script src="batFlock.js"></script>
-    <script src="tutorial.js"></script>
-    <script src="sketch.js"></script>
+    <script src="vehicle.js?v=20260205"></script>
+    <script src="particle.js?v=20260205"></script>
+    <script src="obstacle.js?v=20260205"></script>
+    <script src="toxicSnake.js?v=20260205"></script>
+    <script src="food.js?v=20260205"></script>
+    <script src="snake.js?v=20260205"></script>
+    <script src="bossRenderer.js?v=20260205"></script>
+    <script src="flameSerpent.js?v=20260205"></script>
+    <script src="batFlock.js?v=20260205"></script>
+    <script src="tutorial.js?v=20260205"></script>
+    <script src="sketch.js?v=20260205"></script>
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;700;900&display=swap" rel="stylesheet">
 </head>
 
@@ -129,11 +129,11 @@
                 <span class="ui-label">TIME</span>
                 <span id="game-timer">00:00</span>
             </div>
-            <div id="health-container" class="ui-item health-container hidden">
-                <span class="heart" id="heart-1">❤️</span>
-                <span class="heart" id="heart-2">❤️</span>
-                <span class="heart" id="heart-3">❤️</span>
-            </div>
+        </div>
+        <div id="health-container" class="ui-item health-container hidden">
+            <span class="heart" id="heart-1">❤️</span>
+            <span class="heart" id="heart-2">❤️</span>
+            <span class="heart" id="heart-3">❤️</span>
         </div>
     </div>
 
