--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
             <div class="test-arena-launcher">
                 <button id="test-arena-btn" class="menu-btn test-btn">TEST ARENA 🧪</button>
                 <button id="test-arena-2-btn" class="menu-btn test-btn portal">TEST ARENA 2 🌀</button>
+                <button id="test-arena-3-btn" class="menu-btn test-btn stun">TEST STUN 😵</button>
                 <button id="boss-arena-btn" class="menu-btn test-btn boss">BOSS ARENA 💀</button>
             </div>
         </div>
@@ -136,30 +137,32 @@
             <span class="heart" id="heart-3">❤️</span>
         </div>
 
-        <!-- Game Over Modal -->
-        <div id="game-over-modal" class="overlay hidden">
-            <div class="modal-content king-modal">
-                <h2>Game Over</h2>
-                <div id="level-complete-msg"
-                    style="display: none; color: #4ade80; font-size: 20px; font-weight: bold; margin: 10px 0;">🎉 LEVEL
-                    COMPLETE!</div>
-                <div class="final-stats">
-                    <div class="final-stat">
-                        <span>TOP SCORE</span>
-                        <span id="final-top-score">0</span>
-                    </div>
-                    <div class="final-stat">
-                        <span>YOUR SCORE</span>
-                        <span id="final-score">0</span>
-                    </div>
+    </div>
+
+    <!-- Game Over Modal -->
+    <div id="game-over-modal" class="overlay hidden">
+        <div class="modal-content king-modal">
+            <h2>Game Over</h2>
+            <div id="level-complete-msg"
+                style="display: none; color: #4ade80; font-size: 20px; font-weight: bold; margin: 10px 0;">🎉 LEVEL
+                COMPLETE!</div>
+            <div class="final-stats">
+                <div class="final-stat">
+                    <span>TOP SCORE</span>
+                    <span id="final-top-score">0</span>
                 </div>
-                <div class="modal-actions">
-                    <button id="next-level-btn" class="modal-btn yellow" style="display: none;">Next Level</button>
-                    <button id="restart-btn" class="modal-btn yellow">Play Again</button>
-                    <button id="exit-btn" class="modal-btn cyan">Exit Game</button>
+                <div class="final-stat">
+                    <span>YOUR SCORE</span>
+                    <span id="final-score">0</span>
                 </div>
             </div>
+            <div class="modal-actions">
+                <button id="next-level-btn" class="modal-btn yellow" style="display: none;">Next Level</button>
+                <button id="restart-btn" class="modal-btn yellow">Play Again</button>
+                <button id="exit-btn" class="modal-btn cyan">Exit Game</button>
+            </div>
         </div>
+    </div>
 </body>
 
 </html>
