added boss fight soundtrack

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css?v=20260205">
     <link rel="stylesheet" href="levels.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.0/p5.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.0/addons/p5.sound.min.js"></script>
     <script src="vehicle.js?v=20260205"></script>
     <script src="particle.js?v=20260205"></script>
     <script src="obstacle.js?v=20260205"></script>
