--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@
     <link rel="stylesheet" href="levels.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.0/p5.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.0/addons/p5.sound.min.js"></script>
-    <script src="vehicle.js?v=20260205"></script>
-    <script src="particle.js?v=20260205"></script>
-    <script src="obstacle.js?v=20260205"></script>
-    <script src="toxicSnake.js?v=20260205"></script>
-    <script src="food.js?v=20260205"></script>
-    <script src="snake.js?v=20260205"></script>
-    <script src="bossRenderer.js?v=20260205"></script>
-    <script src="flameSerpent.js?v=20260205"></script>
-    <script src="batFlock.js?v=20260205"></script>
-    <script src="tutorial.js?v=20260205"></script>
-    <script src="sketch.js?v=20260205"></script>
+    <script src="vehicle.js?v=20260206_debug"></script>
+    <script src="particle.js?v=20260206_debug"></script>
+    <script src="obstacle.js?v=20260206_debug"></script>
+    <script src="toxicSnake.js?v=20260206_debug"></script>
+    <script src="food.js?v=20260206_debug"></script>
+    <script src="snake.js?v=20260206_debug"></script>
+    <script src="bossRenderer.js?v=20260206_debug"></script>
+    <script src="flameSerpent.js?v=20260206_debug"></script>
+    <script src="batFlock.js?v=20260206_debug"></script>
+    <script src="tutorial.js?v=20260206_debug"></script>
+    <script src="sketch.js?v=20260206_debug"></script>
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;700;900&display=swap" rel="stylesheet">
 </head>
 
