added skip cutscene button to boss battle

--- a/index.html
+++ b/index.html
@@ -215,6 +215,14 @@
 
     </div>
 
+    <!-- Skip Cutscene Button -->
+    <div id="skip-container" class="skip-container hidden">
+        <button id="skip-cutscene-btn" class="skip-btn blue">
+            <span>SKIP CUTSCENE</span>
+            <span class="skip-icon">⏩</span>
+        </button>
+    </div>
+
     <!-- Game Over Modal -->
     <div id="game-over-modal" class="overlay hidden">
         <div class="modal-content king-modal">
